# rust-feh

./: .codacy.yml  .envrc  .envrc.local.example  .gitignore  AGENTS.md  Cargo.toml  README.md  build-and-place.sh
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: hermes.manifest.json  speckit.manifest.json
.specify/integrations/.cache/: catalog-3ef71b1cc239a1c0-metadata.json  catalog-67d04329c6a0400d-metadata.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
archive/original-nfeh/: README.md  package.json
docs/: MAGICK-CACHE-SETUP.md  NFEH-COMPARISON-AND-MIGRATION.md  POSITIONING.md
scripts/: capture-app-screenshot.sh  generate-perf-fixture.sh  measure-resources.sh  run-003-gui-session.sh  sample-rss.sh  sudo-askpass-bin.sh  sudo-askpass.fish  sudo-askpass.sh  validate-009-quickstart-hints.sh  validate-feature-001.sh  validate-gui-performance.sh
specs/: NEXT-ROUND-CONSOLIDATED.md  OUTSTANDING-ISSUES-ROADMAP.md  SESSION-2026-06-22-TRACEABILITY.md
specs/001-persistent-ui-virtual-browsing/: adversarial-review.md  data-model.md  gap-audit.md  lessons-learned.md  outstanding-issues.md  plan.md  quickstart.md  remediation.md  research.md  spec.md  tasks.md  validation-results.md
specs/001-persistent-ui-virtual-browsing/checklists/: code-architecture.md  requirements.md  ux-performance.md
specs/002-feh-runtime-detection/: spec.md
specs/002-feh-runtime-detection/checklists/: requirements.md
specs/003-gui-performance-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  validation-results.md
specs/003-gui-performance-validation/checklists/: requirements.md
specs/004-scanner-resilience/: spec.md
specs/005-image-list-presentation/: adversarial-review.md  data-model.md  gap-audit.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-window-viewer-stability/: data-model.md  gap-audit.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-outstanding-roadmap/: spec.md
specs/008-tool-capabilities-panel/: data-model.md  gap-audit.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-external-tool-runtime/: data-model.md  gap-audit.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-browsing-experience-round/: data-model.md  gap-audit.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  validation-results.md
specs/012-ui-feedback-polish/: gap-audit.md  plan.md  quickstart.md  spec.md  tasks.md  validation-results.md
specs/013-image-tools-magick-cache/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-multi-feh-clipboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: image_proc.rs  lib.rs  main.rs  scanner.rs  tool_caps.rs  types.rs  ui_logic.rs
tests/: feature_001_validation.rs  feature_005_list.rs
tests/integration/: clipboard_copy.rs  desktop_tools_variations.rs  feature_014_folders.rs  image_tools.rs
tests/perf/: sc_timing.rs
tests/unit/: image_proc.rs  ui_logic.rs
(+23 files in other folders)
