[package]
name = "rust-feh"
version = "0.1.0"
edition = "2021"
authors = ["rust-feh Developers"]
description = "Fast lightweight GUI frontend for feh with image tools"
license = "MIT"
repository = "https://github.com/kairin/rust-feh"
keywords = ["feh", "image", "viewer", "gui", "wallpaper", "linux"]
categories = ["gui"]

[dependencies]
# GUI - egui + eframe (chosen for speed, small binary, no Qt)
# Using glow backend for easier first build on Linux (fewer graphics driver requirements than wgpu)
eframe = { version = "0.30", features = ["glow"] } # glow for simpler Linux/OpenGL builds; switch to "default" for wgpu if needed
egui = "0.30"

# Native file dialogs
rfd = "0.15"

# FS scanning (light)
walkdir = "2"

# Image processing (resize, convert formats) - pure Rust
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "rayon"] }

# Utilities
which = "6"

# Clipboard + persisted launch-entry configuration (feature 014)
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# For future async work (commented to keep initial compile lighter)
# tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
# flume = "0.11"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[[test]]
name = "unit_image_proc"
path = "tests/unit/image_proc.rs"

[[test]]
name = "unit_ui_logic"
path = "tests/unit/ui_logic.rs"

[[test]]
name = "integration_image_tools"
path = "tests/integration/image_tools.rs"

[[test]]
name = "integration_clipboard_copy"
path = "tests/integration/clipboard_copy.rs"

[[test]]
name = "feature_014_folders"
path = "tests/integration/feature_014_folders.rs"

[[test]]
name = "desktop_tools_variations"
path = "tests/integration/desktop_tools_variations.rs"

[[test]]
name = "perf_sc_timing"
path = "tests/perf/sc_timing.rs"
